2004-10-13  Harald Harders  <h.harders@tu-bs.de>

	* src/graph3d.c (map3d_position_r get_arrow3d):
	Change the interface of the function map3d_position_r() to be similar 
	to map_position_r().  Now, map3d_position_r() does not need to get the 
	startpoint.  This will make it easier to use it for all kinds of 
	relative coordinates as text offsets.

	* src/graphics.c (get_arrow):  map_position_r already handles the
	relative position; no need to duplicate it in get_arrow.

	* docs/gnuplot.doc: Mention that relative coordinates in log scale
	imply a multiplicative rather than an additive offset.

2004-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_labels): Add a TBOOLEAN flag to indicate whether
	labels should be clipped against the current axis limits. Labels
	generated by "set label <foo>" are never clipped; labels generated by 
	'plot with labels' are clipped.

	* src/graphics.c (fill_between): Improve clipping to handle 1st/2nd axes
	and inverted axis range.

2004-10-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (apply_zoom): Fix for reversed y-range in zoom by mouse
	and "set view map".

	* src/graphics.c (do_plot): Better warning for trying to use pm3d in a
	2d plot.

2004-10-08  Petr Tobiska <tobiska@ure.cas.cz>

	* term/metapost.trm (MP_arrow): Handle double-ended arrows also.

2004-10-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_font): Release previous font every time a new one
	is requested. This feels wrong to me since we know the old font will be
	used again very soon, but otherwise there is a serious memory leak.

	* src/gplt_x11.c (PaletteMake): (Daniel Sebald <daniel.sebald@ieee.org>)
	Fix another tiny memory leak.

	* src/plot3d.c (get_3ddata): Add missing #ifdef EAM_DATASTRINGS.

	* configure.in: If --disable-datastrings is selected, then turn off 
	histogram support also since it is crippled without the 
	datastrings code.

2004-10-05  Petr Mikulik  <mikulik@physics.muni.cz>
