@@ -1,3 +1,9 @@
+2004-10-14  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (get_data eval_plots): Defer adjustment of histogram 
+	ranges until after the input file has been checked for valid data.
+	(fixes bug #1046894).
+
 2004-10-13  Harald Harders  <h.harders@tu-bs.de>
 
 	* src/graph3d.c (map3d_position_r get_arrow3d):
